kubernetes/frontendproxy/frontend-proxy.json
{
    "apiVersion": "networking.k8s.io/v1",
    "kind": "Ingress",
    "metadata": {
        "annotations": {
            "alb.ingress.kubernetes.io/listen-ports": "[{\"HTTP\": 80}]",
            "alb.ingress.kubernetes.io/scheme": "internet-facing",
            "alb.ingress.kubernetes.io/target-type": "ip",
            "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"networking.k8s.io/v1\",\"kind\":\"Ingress\",\"metadata\":{\"annotations\":{\"alb.ingress.kubernetes.io/listen-ports\":\"[{\\\"HTTP\\\": 80}]\",\"alb.ingress.kubernetes.io/scheme\":\"internet-facing\",\"alb.ingress.kubernetes.io/target-type\":\"ip\"},\"name\":\"frontend-proxy\",\"namespace\":\"default\"},\"spec\":{\"ingressClassName\":\"alb\",\"rules\":[{\"host\":\"example.com\",\"http\":{\"paths\":[{\"backend\":{\ [...]
        },
        "creationTimestamp": "2025-09-07T01:19:49Z",
        "deletionGracePeriodSeconds": 0,
        "deletionTimestamp": "2025-09-07T01:28:34Z",
        "generation": 2,
        "name": "frontend-proxy",
        "namespace": "default",
        "resourceVersion": "7180",
        "uid": "a484f713-5bc1-4653-a94f-a22efb0e83ef"
    },
    "spec": {
        "ingressClassName": "alb",
        "rules": [
            {
                "host": "example.com",
                "http": {
                    "paths": [
                        {
                            "backend": {
                                "service": {
                                    "name": "opentelemetry-demo-frontendproxy",
                                    "port": {
                                        "number": 8080
                                    }
                                }
                            },
                            "path": "/",
                            "pathType": "Prefix"
                        }
                    ]
                }
            }
        ]
    },
    "status": {
        "loadBalancer": {}
    }
}
